# boadica-api

./: README.md  main.py  pyproject.toml  scrapper.py
