[tool.poetry]
name = "boadica-api"
version = "0.1.0"
description = ""
authors = ["Diogo"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
